@@ -91,7 +91,7 @@ public class TestClassify extends TestCase
         String qs1 = "PREFIX : <http://example/>\n" ;
         String qs = qs1+"SELECT * "+pattern;
         Query query = QueryFactory.create(qs) ;
-        Op op = Algebra.compile(query.getQueryPattern()) ;
+        Op op = Algebra.compile(query.getQueryPattern(), false) ;
         
         if ( ! ( op instanceof OpJoin ) )
             fail("Not a join: "+pattern) ;
@@ -118,7 +118,7 @@ public class TestClassify extends TestCase
         String qs1 = "PREFIX : <http://example/>\n" ;
         String qs = qs1+"SELECT * "+pattern;
         Query query = QueryFactory.create(qs) ;
-        Op op = Algebra.compile(query.getQueryPattern()) ;
+        Op op = Algebra.compile(query.getQueryPattern(), false) ;
         
         if ( ! ( op instanceof OpLeftJoin ) )
             fail("Not a leftjoin: "+pattern) ;
